fix: fix noise bg , limit to 0 and styled scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,3 +98,24 @@
   [&::-webkit-slider-thumb]:bg-slate-50;
   }
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: hsl(var(--accent));
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: hsl(var(--primary) / 0.8);
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
